tests/fail/open__builtin__--AttributeError.py
import __builtin__
__builtin__.open
